--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>DebtTracker - Smart Personal Debt Management</title>
+    <meta name="description" content="Track and manage your personal debts and loans with DebtTracker. Get a clear overview of who owes you money and what you owe others." />
+    <meta name="keywords" content="debt tracker, personal finance, loan management, debt management, financial tracking" />
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://debttracker.app/" />
+    <meta property="og:title" content="DebtTracker - Smart Personal Debt Management" />
+    <meta property="og:description" content="Track and manage your personal debts and loans with DebtTracker. Get a clear overview of who owes you money and what you owe others." />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://debttracker.app/" />
+    <meta property="twitter:title" content="DebtTracker - Smart Personal Debt Management" />
+    <meta property="twitter:description" content="Track and manage your personal debts and loans with DebtTracker. Get a clear overview of who owes you money and what you owe others." />
+    <meta property="twitter:image" content="/og-image.jpg" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#1e40af" />
   </head>
   <body>
     <div id="root"></div>
